2022-10-03T08:35:18Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3172725249
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 338 530 / 359 560
* notice: next accum: outdated-unq outdated-all / unq all: 338 530 / 358 559
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [] / [2022-09-19]

2022-10-03T02:07:43Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3171040573
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 336 527 / 358 558
* notice: next accum: outdated-unq outdated-all / unq all: 338 530 / 359 560
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-18] / []

2022-10-02T08:31:25Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3167903810
* notice: last 14d: unq all: 2 31
* notice: prev accum: outdated-unq outdated-all / unq all: 336 527 / 357 558
* notice: next accum: outdated-unq outdated-all / unq all: 336 527 / 358 558
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -2 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-18 2022-10-02]

2022-10-01T16:35:26Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3165323500
* notice: last 14d: unq all: 2 31
* notice: prev accum: outdated-unq outdated-all / unq all: 335 526 / 356 557
* notice: next accum: outdated-unq outdated-all / unq all: 336 527 / 357 558
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-17] / [2022-10-01]

2022-10-01T02:49:51Z: