@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-03T08:35:18Z",
-  "count_outdated" : 530,
-  "uniques_outdated" : 338,
-  "count" : 559,
-  "uniques" : 358,
+  "timestamp" : "2022-10-04T02:20:25Z",
+  "count_outdated" : 532,
+  "uniques_outdated" : 340,
+  "count" : 560,
+  "uniques" : 359,
   "clones" : [
-    {
-      "timestamp": "2022-09-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-20T00:00:00Z",
       "count": 1,
