@@ -1,3 +1,11 @@
+2022-10-04T02:20:25Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3178930492
+* notice: last 14d: unq all: 2 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 338 530 / 358 559
+* notice: next accum: outdated-unq outdated-all / unq all: 340 532 / 359 560
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-19] / []
+
 2022-10-03T08:35:18Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3172725249
 * notice: last 14d: unq all: 2 29
